[package]
name = "json-llm"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["types"]

[dependencies]
types = { path = "types" }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
anyhow = "1.0.86"
rand = "0.8.5"
fundu = "2.0.0"
kalosm = { git = "https://github.com/floneum/floneum", features = ["language"] }
futures-util = "0.3.30"
libflate = "2.1.0"
urlencoding = "2.1.3"
warc = "0.3.2"
tracing-subscriber = "0.3.18"
